--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,90 @@
   /* To-do: Change font to Open Sans */
 }
 
+.logo {
+  width: 40%;
+  max-width: 550px;
+  will-change: filter;
+  transition: filter 300ms;
+}
+/* .logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+} */
+
+/* @keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+} */
+
+.navbar {
+  justify-content: center;
+  display: flex;
+
+  /* FIXED */
+  border-bottom: 3px solid #F0475F;
+
+  /* DYNAMIC */
+  /* border-bottom: 0.2vw solid #F0475F; */
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropbtn {
+  background: transparent;
+  color: white;
+  border: none;
+
+  /* FIXED */
+  padding: 0px 21px 12px;
+  font-size: 20px;
+
+  /* DYNAMIC */
+  /* padding: 0px 1.45vw 0.85vw;
+  font-size: 1.4vw; */
+}
+.dropbtn:focus{
+  outline: none;
+}
+
+.dropdown-content {
+  left: 50%;
+  right: auto;
+  text-align: center;
+  transform: translate(-50%, 0);
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  width: max-content;
+  /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
+  z-index: 1;
+}
+
+.dropdown-content a {
+  background-color: #8b0000;
+  color: white;
+  border-bottom: 1px solid white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #5f0000;
+  color: white;
+}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+/* .dropdown:hover .dropbtn {background-color: #3e8e41;} */
+
 .body {
   margin: 0 auto;
   padding: 1rem;
