--- a/src/App.css
+++ b/src/App.css
@@ -1,81 +1,42 @@
 #root {
-  background: #343434;
-  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
   text-align: center;
-  /* To-do: Change font to Open Sans */
 }
 
 .logo {
-  width: 40%;
+  height: 6em;
+  padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
 }
-/* .logo:hover {
+.logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
-} */
+}
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
+}
 
-/* @keyframes logo-spin {
+@keyframes logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
-} */
-
-.navbar {
-  display: flex;
-  border-bottom: 3px solid #F0475F;
 }
 
-.dropbtn {
-  background: transparent;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-}
-.dropbtn:focus{
-  outline: none;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {background-color: #ddd;}
-
-.dropdown:hover .dropdown-content {display: block;}
-
-/* .dropdown:hover .dropbtn {background-color: #3e8e41;} */
-
-.body {
-  margin: 0 auto;
-  padding: 1rem;
-  color:white;
-}
-
-/* @media (prefers-reduced-motion: no-preference) {
+@media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
-} */
+}
 
+.card {
+  padding: 2em;
+}
 
+.read-the-docs {
+  color: #888;
+}
