--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,20 @@
+body {
+  margin: 0;
+}
+
 #root {
   /* max-width: 1280px; */
   /* margin: 0 auto; */
-  padding: 2rem;
+  /* padding: 2rem; */
   /* text-align: center; */
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.App {
+  padding: 1rem;
+  flex: 1;
 }
 
 .logo {
