restructured some code

--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ h2 {
 	line-height: 1.1;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
 	:root {
 		color: #213547;
 		background-color: #ffffff;
@@ -44,7 +44,7 @@ h2 {
 	button {
 		background-color: #f9f9f9;
 	}
-}
+} */
 
 @tailwind base;
 @tailwind components;
